--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-ANYKERNEL_SOURCE=
-ANYKERNEL_SOURCE_BRANCH=
-KERNEL_SOURCE=
-KERNEL_SOURCE_BRANCH=
-KERNEL_TARGET=
+ANYKERNEL_SOURCE=https://github.com/crdroidandroid/android_kernel_oneplus_sm8150.git
+ANYKERNEL_SOURCE_BRANCH=master
+KERNEL_SOURCE=https://github.com/crdroidandroid/android_kernel_oneplus_sm8150.git
+KERNEL_SOURCE_BRANCH=13.0-base
+KERNEL_TARGET=SM8150-perf
 BUILD_ARGS:CC=clang LD=ld.lld
